--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,12 @@
   .page {
     @apply w-full h-screen overflow-hidden;
   }
+  .page-scrollable {
+    @apply w-full min-h-screen overflow-y-auto;
+  }
+  body.scrollable {
+    @apply overflow-y-auto;
+  }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.2] mb-5 font-semibold;
   }
